testOOPProject/src/oop/sample/TestAbstract.java
package oop.sample;

public class TestAbstract {

//	private AbstractCalss ref; // = new AbstractCalss(); // error
	
	public void test() {
		// ref = new AbstractCalss();
		
		java.util.Calendar today;
	}
}
